<resources>
    <!--<string name="app_name">超級生命密碼夢想舞臺</string>-->
    <string name="loading_text">Loading…</string>
    <string name="facebook_app_id">907727359385638</string>
    <string name="fb_login_protocol_scheme">fb907727359385638</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">oi1g7ATSx1L9vgSWWMfGiuKe9</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">mBeSvnW2E3heVGo2C07sH8pgF3ptTjnFz5cPJiF7wck6VrBdaG</string>
    <string name="no_internet">Network error, please check your internet connection.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="country_activities">Country Activities</string>
    <string name="free_downloads">Free Downloads</string>
    <string name="daily_activities">Daily Activities</string>
    <string name="sharing">Sharing</string>
    <string name="annoucement">Announcement</string>
    <string name="learing">Learning</string>
    <string name="product_shopping">Product Store</string>
    <string name="abourt">About</string>
    <string name="home">Home</string>
    <string name="accept">Accept</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="language">Language</string>
    <string name="richestlife">RichestLife</string>
    <string name="server_error">Something went wrong, Please try again later.</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>

    <string name="skip">Skip</string>
    <string name="continuee">Continue</string>
    <string name="signup">Sign Up</string>
    <string name="skip_and_signup">Skip &amp; Signup</string>
    <string name="que">\?</string>

    <string name="select_book_on_sales">Select Available Books on Sales</string>
    <string name="select_book">Please select the book</string>
    <string name="print_by_quantity">Print by Book quantity</string>
    <string name="buy_by_quantity">Print by Book quantity</string>


</resources>
