<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPurple"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <com.superlifesecretcode.app.custom.CircleImageView
                android:id="@+id/imageView_user"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:src="@drawable/default_placeholder" />

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="Name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edi_text_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent"
                android:hint="@string/name"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/colorPurple"
                android:textColorHint="@color/colorLightPurple"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_flag"
                android:layout_width="0dp"
                android:scaleType="fitStart"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:src="@drawable/flag_us" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/mobile_number"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edi_text_phone"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent"
                android:hint="@string/mobile_number"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/colorPurple"
                android:textColorHint="@color/colorLightPurple"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/gender"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/textView_gender"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:gravity="center_vertical"
                android:hint="@string/gender"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/colorPurple"
                android:textColorHint="@color/colorLightPurple"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/country"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/textView_country"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:gravity="center_vertical"
                android:hint="@string/country"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/colorPurple"
                android:textColorHint="@color/colorLightPurple"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/state"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/textView_state"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:gravity="center_vertical"
                android:hint="@string/state"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/colorPurple"
                android:textColorHint="@color/colorLightPurple"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Select Language"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/textView_language"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/button_transparent"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:gravity="center_vertical"
                android:hint="@string/language"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/colorPurple"
                android:textColorHint="@color/colorLightPurple"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>