<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    tools:context="com.superlifesecretcode.app.ui.register.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@mipmap/ic_launcher"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_icon"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/_5sdp"
            android:text="Sign Up"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/layout_profile_img"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_below="@+id/textView_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp">

            <com.superlifesecretcode.app.custom.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageView_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/upload"
                app:civ_border_color="@color/colorOrange"
                app:civ_border_width="0.5dp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_profile_img"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edi_text_name"
                style="@style/EdiTextStyle"
                android:hint="@string/name"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView_gender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/text_box_bg"
                android:drawableRight="@drawable/arrow_drop_down"
                android:fontFamily="@font/reguler"
                android:gravity="center_vertical"
                android:hint="@string/gender"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:textColor="@color/colorOrange"
                android:textColorHint="@color/colorOrange"
                android:textSize="@dimen/_13sdp" />

            <EditText
                android:id="@+id/edit_text_email"
                style="@style/EdiTextStyle"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="Email"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:fontFamily="@font/reguler"
                    android:text="I am agree to the "
                    android:textColor="@color/colorLightBlack"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/textView_tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/reguler"
                    android:text="Terms of Services"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_34sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_white_elipse"
                    android:fontFamily="@font/reguler"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/_13sdp" />

                <Button
                    android:id="@+id/button_skipand_register"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_34sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_white_elipse"
                    android:fontFamily="@font/reguler"
                    android:text="@string/skip_and_signup"
                    android:textAllCaps="false"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/layout_signup"
            android:gravity="bottom">

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_20sdp">

                <TextView
                    android:id="@+id/textview_allready_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/reguler"
                    android:gravity="center_horizontal"
                    android:text="Already have an account?"
                    android:textColor="@color/colorLightBlack"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/textView_siginin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/reguler"
                    android:letterSpacing="0.01"
                    android:text=" Sign In to Continue"
                    android:textColor="@color/colorLightBlack"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
